syntax = "proto3";

option csharp_namespace = "ReLiveWP.Backend.Identity";

import "google/protobuf/timestamp.proto";

package login;

// The greeting service definition.
service Login {
  // Sends a greeting
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc UserExists(UserExistsRequest) returns (UserExistsResponse);
}

message RegisterRequest {
  string username = 1;
  string emailAddress = 2;
  string password = 3;
}

message RegisterResponse {
  bool succeeded = 1;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  bool succeeded = 1;
  string uuid = 2;
  string token = 3;
  google.protobuf.Timestamp exipres = 4;
}

message UserExistsRequest { 
  string username = 1;
}

message UserExistsResponse {
bool exists = 1;
}