syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "ReLiveWP.Services.Grpc";

package identity;

service ConnectedServices {
  rpc GetJsonWebKeys(google.protobuf.Empty) returns (JsonWebKeysResponse);

  rpc BeginAccountLinkingForService(BeginAccountLinkingRequest) returns (BeginAccountLinkingResponse);
  rpc FinaliseAccountLinkingForService(FinaliseAccountLinkingRequest) returns (FinaliseAccountLinkingResponse);

  rpc GetSupportedConnections(google.protobuf.Empty) returns (SupportedConnectionsResponse);
  rpc GetConnections(ConnectionsRequest) returns (ConnectionsResponse);
}

message JsonWebKeysResponse {
	string keys = 1;
}

message BeginAccountLinkingRequest {
	string service = 1;
	string identifer = 2;
}

message BeginAccountLinkingResponse {
	string redirectUri = 1;
}

message FinaliseAccountLinkingRequest {
	string service = 1;
	string state = 2;
	optional string issuer = 3;
	string code = 4;
}

message FinaliseAccountLinkingResponse {

}

message SupportedConnection {
	string service = 1;
	string displayName = 2;
	uint64 capabilities = 3;
}

message SupportedConnectionsResponse {
	repeated SupportedConnection availableConnections = 1;
}

message ConnectionsRequest {
    repeated string services = 1;
	optional uint64 capabilities = 2;
}

message Connection {
	string id = 1;
	string service = 2;
	optional string serviceUrl = 3;
	uint64 flags = 4;
	uint64 capabilities = 5;

	string userId = 6;
	optional string userName = 7;
	optional string emailAddress = 8;
}

message ConnectionsResponse {
	repeated Connection connections = 1;
}